--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta charset="UTF-8">
 <html lang="fr">
 <head>
     <title>Fluffy Giggle</title>
@@ -40,13 +41,15 @@
 <script src="game/graphic.js"></script>
 <script src="game/physic.js"></script>
 <script src="game/shoot.js"></script>
+<script src="game/ennemies.js"></script>
 
 <script type="text/javascript">
     var container, scene, camera, renderer, controls, stats;
     var keyboard = new THREEx.KeyboardState();
     var clock = new THREE.Clock();
     var player1,
-        player2;
+        player2,
+        ennemies;
     var WIDTH = 600,
         HEIGHT = 400;
 
